--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
     margin: 0;
     padding: 0;
+    font-family: 'General Sans', sans-serif;
+}
+
+body {
+    background-color: #F4F2EE;
+}
+
+.Background-Size {
+    background-size: cover;
+    background-repeat: no-repeat;
 }
