Update Logic Account && Change Structure posts

--- a/front-end/src/styles/index.css
+++ b/front-end/src/styles/index.css
@@ -16,3 +16,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.changeProfile div:last-child {
+    display: none;
+}
+
+.changeProfile:hover {
+    div:last-child {
+        display: flex;
+    }
+}
